# graph-demo

./: README.md  pyproject.toml
graph_demo/: Movie_lens_small.ipynb  eu_core_communication.ipynb  movies.csv  movies_edgelist.csv
graph_demo/.ipynb_checkpoints/: karate_club-checkpoint.ipynb
tests/: test_graph_demo.py
