[tool.poetry]
name = "graph-demo"
version = "0.1.0"
description = ""
authors = ["asaid7 <asaid@guidehouse.com>"]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^2.6.3"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
scikit-learn = "^1.0.1"
node2vec = "^0.4.4"
jupyterlab = "^3.2.1"
python-louvain = "^0.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
